--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,27 @@
 <ion-view view-title="Home">
   <ion-content>
-    <h1>Home</h1>
+    <div class="row padding">
+	    <button class="col button button-outline button-positive ">
+		  Votre adversaire est prêt ! Jouez maintenant !
+		</button>
+	</div>
+	<div class="row padding">
+	    <div class="list card col">
+			<div class="item item-avatar">
+				<img src="../img/ionic.png">
+				<h2>John Doe</h2>
+				<p>Level 21 : 100/200</p>
+			</div>
+
+			<div class="item item-body">
+			</div>
+
+			<a class="item item-icon-left assertive" href="#">
+			<i class="icon ion-person"></i>
+			Voir mon profil
+		</a>
+
+		</div>
+	</div>
   </ion-content>
 </ion-view>
