--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,14 +13,23 @@
 				<p>Level 21 : 100/200</p>
 			</div>
 
-			<div class="item item-body">
-			</div>
-
 			<a class="item item-icon-left assertive" href="#">
-			<i class="icon ion-person"></i>
-			Voir mon profil
-		</a>
-
+				<i class="icon ion-person"></i>
+				Voir mon profil
+			</a>
+		</div>
+	</div>
+	<div class="row padding">
+	    <div class="list col">
+	    	<div class="item item-divider">
+			    Tournois
+			</div>
+			<div class="item item-button-right" ng-repeat="tournament in tournaments">
+			    {{tournament.title}}
+			    <a class="button button-outline button-positive" href="#/app/tournaments/{{tournament.id}}">
+			      <i class="icon ion-eye"></i>
+			    </a>
+			</div>
 		</div>
 	</div>
   </ion-content>
