--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,5 +1,36 @@
 <ion-view view-title="Mon profil">
   <ion-content>
-    <h1>Mon profil</h1>
+	<div class="row padding">
+	    <div class="list card col">
+			<div class="item item-avatar">
+				<img src="../img/ionic.png">
+				<h2>John Doe</h2>
+				<p>Level 21 : 100/200</p>
+			</div>
+
+			<div class="item item-body">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo, nibh ac feugiat sagittis, metus diam tristique nibh, ac vehicula arcu mi vitae odio. Sed malesuada gravida augue, sed lobortis ligula scelerisque non. Phasellus tincidunt sit amet sapien sit amet sollicitudin. Suspendisse ultrices lacus quam, a scelerisque mi malesuada feugiat.
+			</div>
+		</div>
+	</div>
+	<div class="row padding">
+		<div class="list col">
+	    	<div class="item item-divider">
+			    Statistiques / Historique
+			</div>
+			<div class="item">
+			    Nombre de tournois joués
+			    <span class="item-note">
+			      5
+			    </span>
+			</div>
+			<div class="item">
+			    Tournois gagnés
+			    <span class="item-note">
+			      3
+			    </span>
+			</div>
+		</div>
+	</div>
   </ion-content>
 </ion-view>
