--- a/www/templates/tournamentSingle.html
+++ b/www/templates/tournamentSingle.html
@@ -1,9 +1,25 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="{{tournament.name}}">
   <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
-      </ion-item>
-    </ion-list>
+	<div class="row padding">
+	    <div class="list card col">
+			<div class="item">
+				<h2>{{tournament.name}}</h2>
+				<p>{{tournament.game}}</p>
+				<p>{{tournament.status}} - {{tournament.begin_date}}</p>
+			</div>
+
+			<div class="item item-body">
+				{{tournament.desc}}
+			</div>
+		</div>
+	</div>
+	<div class="list col">
+    	<div class="item item-divider">
+		    Joueurs inscrits à ce tournoi
+		</div>
+		<div class="item item-button-right" ng-repeat="player in players">
+		    {{player.pseudo}}
+		</div>
+	</div>
   </ion-content>
 </ion-view>
