--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,7 +13,7 @@
 				<p>Level 21 : 100/200</p>
 			</div>
 
-			<a class="item item-icon-left assertive" href="#">
+			<a class="item item-icon-left assertive" ui-sref="app.profile">
 				<i class="icon ion-person"></i>
 				Voir mon profil
 			</a>
