--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -4,8 +4,8 @@
 	    <div class="list card col">
 			<div class="item item-avatar">
 				<img src="../img/ionic.png">
-				<h2>John Doe</h2>
-				<p>Level 21 : 100/200</p>
+				<h2>{{user.nickname}}</h2>
+				<p>Level {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
 			</div>
 
 			<div class="item item-body">
