--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,8 +9,8 @@
 	    <div class="list card col">
 			<div class="item item-avatar">
 				<img src="../img/ionic.png">
-				<h2>John Doe</h2>
-				<p>Level 21 : 100/200</p>
+				<h2>{{user.nickname}}</h2>
+				<p>Level {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
 			</div>
 
 			<a class="item item-icon-left assertive" ui-sref="app.profile">
@@ -22,10 +22,10 @@
 	<div class="row padding">
 	    <div class="list col">
 	    	<div class="item item-divider">
-			    Tournois
+			    Mes tournois en cours
 			</div>
 			<div class="item item-button-right" ng-repeat="tournament in tournaments">
-			    {{tournament.title}}
+			    {{tournament.name}}
 			    <a class="button button-outline button-positive" href="#/app/tournaments/{{tournament.id}}">
 			      <i class="icon ion-eye"></i>
 			    </a>
