--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -5,7 +5,7 @@
 			<div class="item item-avatar">
 				<img src="../img/ionic.png">
 				<h2>{{user.nickname}}</h2>
-				<p>Level {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
+				<p>Niveau {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
 			</div>
 
 			<div class="item item-body">
