--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,12 +35,15 @@ ion-content{
 	position: relative; 
 	min-height: 300px;
 	clear: both;
+	width: 320px;
+    max-width: 320px;
+    margin: 0 auto;
+    text-align: center;
 }
 .round{
-	display: inline-block; 
-	width: 320px;
+	display: inline-block;
 	text-align: center;
-	float: left;
+	width: 320px;
 }
 
 .round li{
