--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -14,7 +14,7 @@
 	<div class="row padding">
 	    <div class="list card col">
 			<div class="item item-avatar">
-				<img src="../img/ionic.png">
+				<img ng-src="{{getImagePath(user.img)}}" alt="{{user.nickname}}" />
 				<h2>{{user.nickname}}</h2>
 				<p>Level {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
 			</div>
