--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -3,7 +3,7 @@
 	<div class="row padding">
 	    <div class="list card col">
 			<div class="item item-avatar">
-				<img fallback-src="../img/ionic.png" ng-src="{{getImagePath(user.img)}}" alt="{{user.nickname}}" />
+				<img ng-src="{{getImagePath(user.img)}}" alt="{{user.nickname}}" />
 				<h2>{{user.nickname}}</h2>
 				<p>Niveau {{user.level.level}} : {{user.current_exp}}/{{user.level.required}}</p>
 			</div>
